Themes/config-w3/1.0/css/adminpanel.css
@import url("/DesktopModules/DNNrocket/css/w3.css");
@import url("/DesktopModules/DNNrocket/Simplisity/css/simplisity.css");
@import url("/DesktopModules/DNNrocket/API/Themes/config-w3/1.0/css/dnn-theme.css");
@import url("https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium");
@import url("https://fonts.googleapis.com/icon?family=Material+Icons");

body, h1, h2, h3, h4, h5, h6 {
    font-family: "Roboto","Helvetica","Arial",sans-serif;
}

body {
    height: 100vh;
    width: 100vw;
    background-color: #f0f0f0;
}

.material-icons {
    vertical-align: middle;
}

.w3-table td, .w3-table th, .w3-table-all td, .w3-table-all th {
    padding: 4px 4px;
}

.loader {
    width: 40px;
    height: 40px;
    margin: 0 auto;
    border-top: 5px solid #292929;
    border-right: 5px solid #efefef;
    border-bottom: 5px solid #efefef;
    border-left: 5px solid #efefef;
    border-radius: 40px;
    animation: spin 1s infinite linear;
}

@keyframes spin {
    100% {
        transform: rotate(360deg);
    }
}

.w3-table th, .w3-table-all th {
    padding: 8px 8px;
    display: table-cell;
    text-align: left;
    vertical-align: top;
    background-color: #eaeded;
    border-right: 1px solid #ccc
}

.w3-bar {
    width: 100%;
    overflow: hidden
}

.pl-breadcrumb {
    width: 100%;
    overflow: hidden;
    height: 41px;
    margin-left: 16px;
}

.w3-center .pl-breadcrumb {
    display: inline-block;
    width: auto;
}

.pl-breadcrumb .pl-breadcrumb-item {
    padding: 2px 2px;
    float: left;
    width: auto;
    border: none;
    display: block;
    outline: 0
}

.pl-breadcrumb .pl-breadcrumb-itemlink {
    padding: 2px 2px;
    float: left;
    width: auto;
    border: none;
    display: block;
    outline: 0;
    cursor: pointer;
}

.w3-theme-l5 {
    color: #000 !important;
    background-color: #f2f9fe !important
}

.w3-theme-l4 {
    color: #000 !important;
    background-color: #d2eafd !important
}

.w3-theme-l3 {
    color: #000 !important;
    background-color: #a6d4fa !important
}

.w3-theme-l2 {
    color: #000 !important;
    background-color: #79bff8 !important
}

.w3-theme-l1 {
    color: #fff !important;
    background-color: #4daaf6 !important
}

.w3-theme-d1 {
    color: #fff !important;
    background-color: #0c87eb !important
}

.w3-theme-d2 {
    color: #fff !important;
    background-color: #0b78d1 !important
}

.w3-theme-d3 {
    color: #fff !important;
    background-color: #0a69b7 !important
}

.w3-theme-d4 {
    color: #fff !important;
    background-color: #085a9d !important
}

.w3-theme-d5 {
    color: #fff !important;
    background-color: #074b83 !important
}

.w3-theme-light {
    color: #000 !important;
    background-color: #f2f9fe !important
}

.w3-theme-dark {
    color: #fff !important;
    background-color: #074b83 !important
}

.w3-theme-action {
    color: #fff !important;
    background-color: #074b83 !important
}

.w3-theme-action2 {
    color: #fff !important;
    background-color: #2196f3 !important
}

.w3-theme {
    color: #fff !important;
    background-color: #2196f3 !important
}

.w3-text-theme {
    color: #2196f3 !important
}

.w3-border-theme {
    border-color: #2196f3 !important
}

.w3-hover-theme:hover {
    color: #fff !important;
    background-color: #2196f3 !important
}

.w3-hover-text-theme:hover {
    color: #2196f3 !important
}

.w3-hover-border-theme:hover {
    border-color: #2196f3 !important
}

.tag-editor {
    list-style-type: none;
    padding: 0 5px 0 0;
    margin: 0;
    overflow: hidden;
    border: 1px solid #eee;
    cursor: text;
    font: normal 16px sans-serif;
    color: #555;
    background: #fafafa;
    background-color: #ffffe6 !important;
    border: 1px solid #ccc !important;
    padding: 8px 16px !important;
}

    .tag-editor .tag-editor-tag {
        color: #000;
        background: #87ceeb;
        border-radius: 2px;
    }

    .tag-editor .tag-editor-delete {
        background: #87ceeb;
    }

/* Style the category list breadcrumb */
ul.breadcrumb {
    padding: 3px 4px;
    list-style: none;
    background-color: #eee;
}

    ul.breadcrumb li {
        display: inline;
        font-size: 14px;
    }

        ul.breadcrumb li + li:before {
            padding: 8px;
            color: black;
            content: ">";
        }

.mainadminpanel {
    margin-top: 41px;
    margin-left: 0px;
    margin-right: 0px;
    float: right;
    width: calc(100% - 20px);
}

.mainadminpanelpushed {
    margin-top: 41px;
    margin-left: 0px;
    margin-right: 0px;
    float: right;
    width: calc(100% - 260px);
}

.card-margin {
    margin-left: 16px;
    margin-right: 16px;
    margin-top: 8px;
    margin-bottom: 8px;
}

@media (max-width:992px) {
    .mainadminpanel {
        margin-top: 41px;
        margin-left: 0px;
        margin-right: 0px;
        float: right;
        width: calc(100% - 0px);
    }

    .mainadminpanelpushed {
        margin-top: 41px;
        margin-left: 0px;
        margin-right: 0px;
        float: right;
        width: calc(100% - 0px);
    }

    .card-margin {
        margin-left: 8px !important;
        margin-right: 10px !important
    }
}

@media (max-width:600px) {
    .mainadminpanel {
        margin-top: 41px;
        margin-left: 0px;
        margin-right: 0px;
        float: right;
        width: 100%;
    }

    .mainadminpanelpushed {
        margin-top: 41px;
        margin-left: 0px;
        margin-right: 0px;
        float: right;
        width: 100%;
    }

    .card-margin {
        margin-left: 0px !important;
        margin-right: 10px !important
    }
}


/* Hide and remove PersonaBar */
.personaBarContainer {
    display: none !important;
    width: 0 !important;
}

#personaBar-iframe {
    width: 0 !important;
    display: none !important;
}

body {
    margin-left: 0px !important;
}

/* Position main content below top bar and beside sidebar */
.mainadminpanel {
    margin-top: 41px !important; /* Account for top bar height */
    margin-left: 40px !important; /* Account for small sidebar */
    padding: 16px;
}

.mainadminpanelpushed {
    margin-top: 41px !important; /* Account for top bar height */
    margin-left: 280px !important; /* Account for large sidebar */
    padding: 16px;
}

/* Additional overrides */
#editBarContainer {
    display: none !important;
}

#Body {
    margin-left: 0px !important;
}

iframe.editBar-iframe {
    display: none !important;
}

